# notion

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  CHANGELOG  CMakeLists.txt  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog  LICENSE  Makefile  README  README.autoconf  README.md  RELEASING.md  RELNOTES  TODO.README  TODO.riot  _config.yml  config.h  config.h.in  configure.ac  contact.md  distdep  index.html  index.md  ion_changelog.txt  libs.mk  libs.mk.dist  migration.md  mkexports.lua  mkexports.pl  mkpreload.lua  modulelist.mk  nextversion.sh  notion4keys.html  notionkeys.html  oldChangeLog  params.json  (+13 more)
.github/: release-drafter.yml
_layouts/: default.html
cmake/: config.cmake  exports.cmake  module.cmake
contrib/: LICENSE  README  create_gitindex.sh  index.html  index_git.html  install-scripts.sh  verify_index.pl
de/: CMakeLists.txt  Makefile  brush.c  brush.h  colour.c  colour.h  delib.lua  draw.c  font.c  font.h  fontset.c  fontset.h  init.c  init.h  misc.h  precompose.c  precompose.h  private.h  style.c  style.h
doc/: Makefile  config.txt  draw.txt  functions.txt  list_exports.sh  query.txt
dock/: Makefile  README  README.dock  dock-draw.lua  dock.c  dock.lua
etc/: CMakeLists.txt  Makefile  bindings-default.conf  bindings-sun.conf  bindings-sun.diff  cfg_autows.lua  cfg_bindings.lua  cfg_defaults.lua  cfg_dock.lua  cfg_floatws.lua  cfg_ion.lua  cfg_ioncore.lua  cfg_ionws.lua  cfg_kludges.lua  cfg_layouts.lua  cfg_menu.lua  cfg_menus.lua  cfg_modules.lua  cfg_notion.lua  cfg_notion3_keybindings.lua  cfg_notion3_tiling.lua  cfg_notioncore.lua  cfg_panews.lua  cfg_query.lua  cfg_statusbar.lua  cfg_tiling.lua  common-frame-bindings-sun.diff  common-frame-bindings.conf  common-frame-bindings.lua  compat.lua  floatws.conf  floatws.lua  ion-bindings.lua  ion-menus.lua  ion.lua  ioncore-bindings.conf  ioncore-bindings.lua  ioncore-example.conf  ioncore-example.lua  ioncore-lib.lua  (+54 more)
ext_statusbar/: Makefile  cfg_statusbar.lua  ext_statusbar.lua
floatws/: Makefile  floatframe.c  floatframe.h  floatws.c  floatws.h  funtabs.h  main.c  main.h  placement.c  placement.h  resize.c  resize.h
ion/: Makefile  ion.c
ioncore/: CMakeLists.txt  Makefile  activity.c  activity.h  attach.c  attach.h  basicpholder.c  basicpholder.h  binding.c  binding.h  bindmaps.c  bindmaps.h  classes.h  clientwin.c  clientwin.h  close.c  close.h  colormap.c  colormap.h  commandsq.c  commandsq.h  common.h  completehelp.c  completehelp.h  conf-bindings.c  conf-bindings.h  conf-draw.c  conf-draw.h  conf-winprops.c  conf-winprops.h  conf.c  conf.h  cursor.c  cursor.h  defer.c  defer.h  detach.c  detach.h  draw.c  draw.h  (+203 more)
ionflux/: Makefile  ionflux.c
ionws/: .jedcmode  Makefile  bindmaps.c  bindmaps.h  commandsq.c  commandsq.h  conf.c  conf.h  confws.c  confws.h  draw.c  frame-pointer.c  frame-pointer.h  frame.c  frame.h  framep.h  funtab.c  funtab.h  funtabs.c  funtabs.h  ionframe.c  ionframe.h  ionws.c  ionws.h  main.c  main.h  placement.c  placement.h  resize.c  resize.h  split.c  split.h  splitframe.c  splitframe.h  winprops.c  winprops.h  workspace.c  workspace.h
libextl/: .gitignore  CMakeLists.txt  LICENSE  Makefile  README  extl.h  libextl-mkexports  libextl-mkexports.in  luaextl.c  luaextl.h  misc.c  private.h  readconfig.c  readconfig.h  system-autodetect.mk  system.mk  types.h
libmainloop/: CMakeLists.txt  Makefile  defer.c  defer.h  exec.c  exec.h  hooks.c  hooks.h  rx.mk  select.c  select.h  signal.c  signal.h
libtu/: .gitignore  CMakeLists.txt  Makefile  debug.h  dlist.h  errorlog.c  errorlog.h  iterable.c  iterable.h  locale.h  map.c  map.h  minmax.h  misc.c  misc.h  obj.c  obj.h  objlist.c  objlist.h  objp.h  optparser.c  optparser.h  output.c  output.h  parser.c  parser.h  pointer.h  prefix.c  prefix.h  private.h  ptrlist.c  ptrlist.h  rb-test.c  rb.c  rb.h  setparam.c  setparam.h  stringstore.c  stringstore.h  system-autodetect.mk  (+9 more)
luaextl/: Makefile  luaextl.c  luaextl.h
man/: Makefile  ion.1.in  ion.1.in.txt  ion.1x.in  ion3.1.in  ion3.1.in.txt  ion3.cs.in  ion3.de.in  ion3.fi.in  ion3.in  notion.cs.in  notion.fi.in  notion.in  notionflux.in  pwm.1.in  pwm3.1.in  pwm3.cs.in  pwm3.de.in  pwm3.fi.in  pwm3.in  welcome.cs.head  welcome.de.head  welcome.fi.head  welcome.head
menu/: Makefile  main.c  main.h  menu.c  menu.h  menulib.lua  menup.h  mkmenu.c  mkmenu.h
mod_autows/: Makefile  autoframe.c  autoframe.h  autows.c  autows.h  main.c  main.h  mod_autows.lua  panehandle.c  panehandle.h  panewin.c  panewin.h  placement.c  placement.h  splitext.c  splitext.h  templates.lua  unusedwin.c  unusedwin.h
mod_dock/: CMakeLists.txt  Makefile  README.dock  cfg_dock.lua  dock-draw.lua  dock.c  dock.lua
mod_floatws/: Makefile  classes.h  floatframe.c  floatframe.h  floatws.c  floatws.h  floatwspholder.c  floatwspholder.h  floatwsrescueph.c  floatwsrescueph.h  main.c  main.h  placement.c  placement.h
mod_ionflux/: Makefile  mod_ionflux.c
mod_ionws/: Makefile  ionframe.c  ionframe.h  ionws.c  ionws.h  main.c  main.h  panehandle.c  panehandle.h  placement.c  placement.h  split-dock.c  split-dock.h  split-stdisp.c  split-stdisp.h  split.c  split.h  splitfloat.c  splitfloat.h
mod_menu/: CMakeLists.txt  Makefile  grabmenu.c  main.c  main.h  menu.c  menu.h  menulib.lua  mkmenu.c  mkmenu.h  mod_menu.lua
mod_mgmtmode/: Makefile  main.c  main.h  mgmtmode.c  mgmtmode.h
mod_notionflux/: .gitignore  CMakeLists.txt  Makefile  README  ionflux.h  mod_notionflux.c  mod_notionflux.lua  notionflux.h  system.mk
mod_panews/: Makefile  main.c  main.h  mod_panews.lua  panehandle.c  panehandle.h  panews.c  panews.h  placement.c  placement.h  splitext.c  splitext.h  splitfloat.c  splitfloat.h  unusedwin.c  unusedwin.h
mod_query/: CMakeLists.txt  Makefile  complete.c  complete.h  edln.c  edln.h  fwarn.c  fwarn.h  history.c  history.h  input.c  input.h  inputp.h  listing.c  listing.h  main.c  main.h  mod_query.lua  mod_query_chdir.lua  query.c  (+7 more)
utils/ion-statusd/: CMakeLists.txt  Makefile  exec.c  extlrx.c  ion-statusd.c  statusd_date.lua  statusd_load.lua  statusd_mail.lua
(+406 files in other folders)
